--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sudokusolver">
+    package="com.bs_rb.sudokusolver">
 
     <application
         android:allowBackup="true"
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CameraActivity"></activity>
-        <activity android:name=".GalleryActivity" />
-        <activity android:name=".SudokuBoardActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.bs_rb.sudokusolver.CameraActivity"></activity>
+        <activity android:name="com.bs_rb.sudokusolver.GalleryActivity" />
+        <activity android:name="com.bs_rb.sudokusolver.SudokuBoardActivity" />
+        <activity android:name="com.bs_rb.sudokusolver.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
