--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bs_rb.sudokusolver">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.bs_rb.sudokusolver.CameraActivity"></activity>
+        <activity android:name="com.bs_rb.sudokusolver.CameraActivity"/>
         <activity android:name="com.bs_rb.sudokusolver.GalleryActivity" />
         <activity android:name="com.bs_rb.sudokusolver.SudokuBoardActivity" />
         <activity android:name="com.bs_rb.sudokusolver.MainActivity">
